99-labs/code/splitdim/deploy/kubernetes-kvstore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splitdim
  labels:
    app: splitdim
spec:
  selector:
    matchLabels:
      app: splitdim
  template:
    metadata:
      labels:
        app: splitdim
    spec:
      containers:
        - name: splitdim
          image: localhost/splitdim:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: splitdim
  labels:
    app: splitdim
spec:
  type: LoadBalancer
  selector:
    app: splitdim
  ports:
    - name: http-port
      port: 80
      protocol: TCP
      targetPort: 8080
