99-labs/code/splitdim/deploy/splitdim-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splitdim-2
  labels:
    app: splitdim-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: splitdim-2
  template:
    metadata:
      labels:
        app: splitdim-2
    spec:
      containers:
        - name: splitdim
          image: localhost/splitdim
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: splitdim-2
  labels:
    app: splitdim-2
spec:
  selector:
    app: splitdim-2
  ports:
    - name: "http-splitdim-2"
      port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
